# competitor-analysis

./: README.md  config.py  main.py  pyproject.toml
.deepeval/: .deepeval_telemetry.txt
agents/: llm.py  schema.py  state.py
data/: company_context.json  mock_competitors.json  mock_signals.json  run_log.jsonl  run_log.py
evals/: golden_dataset.json  groq_judge.py  metrics.py
graph/: workflow.py
harness/: replay.py  simulation.py
harness/fixtures/tool_responses/: blinkit_search_2026_03_01.json  zepto_reviews_2026_03_01.json  zomato_jobs_2026_03_01.json
memory/: context_manager.py  episodic.py  semantic.py
prompts/: constants.py
skills/: mcp_client.py  mcp_server.py  tools.py
tests/: test_evals.py  test_graph_replay.py  test_simulation.py  test_tools.py
utils/: guard.py  observability.py
