[tool.uv]
package = false

[tool.uv.sources]

[tool.pytest.ini_options]
pythonpath = ["."]

[project]
name = "competeiq"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.2",
    "deepeval>=3.8.8",
    "fastapi>=0.135.0",
    "google-play-scraper>=1.2.7",
    "httpx>=0.28.1",
    "langchain>=1.2.10",
    "langchain-google-genai>=4.2.1",
    "langchain-tavily>=0.2.17",
    "langgraph>=1.0.10",
    "langsmith>=0.7.9",
    "mcp>=1.26.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "redis>=7.2.1",
    "requests>=2.32.5",
    "uvicorn>=0.41.0",
]
